--- a/Assignment_2/searchResult.html
+++ b/Assignment_2/searchResult.html
@@ -2,14 +2,14 @@
 
 <head>
     <meta charset="utf-8"/>
-    <title>Search Results</title>
+    <title> Search Results </title>
 </head>
 
 <br>
   <header>
-      <h1><center>Anagram Engine</center></h1>
+      <h1><center> Anagram Engine </center></h1>
       <div style="float:right; width:50%; text-align: right;">
-          <p class="sub-headline">You are logged in as {{ user.email() }}</p>
+          <p class="sub-headline">Welcome {{ user.email() }}</p>
       </div>
   </header>
 <div class="header">
