--- a/Assignment_2/searchResult.html
+++ b/Assignment_2/searchResult.html
@@ -33,7 +33,7 @@
                 {% endfor %}
             </table>
         {% else %}
-            No anagrams found for this word<br>
+            No Anagrams found for this Word<br>
         {% endif %}
         <br/>
         <form method="get" action="/" align="right">
